add github link, clean up styles, fix typos

--- a/orange-dot-template.html
+++ b/orange-dot-template.html
@@ -627,7 +627,7 @@ $endif$
   <a href="https://www.pvcc.edu/community-business/network2work"><img src="images/Network2Work Stacked.UPDATE.jpg" alt="Network2Work logo"></img></a>
   <a href="https://virginiaequitycenter.org/"><img src="images/EquityCenter-Logo_Typed_Blue.png" alt="Equity Center logo"></img></a>
 </div>
-
+<p><a href="https://github.com/virginiaequitycenter/orange-dot" class="github-link">Github Repository</a></p>
 </footer>
 
 </div>
